tests/baselines/reference/inheritanceGrandParentPrivateMemberCollision.errors.txt
==== tests/cases/compiler/inheritanceGrandParentPrivateMemberCollision.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! inheritanceGrandParentPrivateMemberCollision.ts(7,7): error TS2141: Class 'C' cannot extend class 'B':
!!! 	Types 'C' and 'A' define property 'myMethod' as private.
        private myMethod() { }
    }
    